--- a/devtools/td-layout-config/src/template/memory.jinja
+++ b/devtools/td-layout-config/src/template/memory.jinja
@@ -8,7 +8,7 @@
 Mem Layout Example
 {%- for m in memory_regions | reverse%}
 {{true|format_layout_border}} <- {{m.region.end|format_hex}}
-|{{m.name | format_name}}|   ({{m.region.end - m.region.start|format_hex}}) {{m.region.end - m.region.start|filesizeformat}}
+|{{m.name_screaming_snake_case | format_name}}|   ({{m.region.end - m.region.start|format_hex}}) {{m.region.end - m.region.start|filesizeformat}}
 {%- endfor %}
 {{true|format_layout_border}} <- {{memory_regions_base|format_hex}}
 Total memory: {{total_memory_length|format_hex}} ({{total_memory_length|filesizeformat}})
@@ -18,8 +18,8 @@ Total memory: {{total_memory_length|format_hex}} ({{total_memory_length|filesize
 {%- for m in memory_regions %}
 {%- if m.name != "FREE" %}
 {%- if m.tolm == false %}
-pub const {{m.name}}_BASE: usize = {{m.region.start | format_hex }};
+pub const {{m.name_screaming_snake_case}}_BASE: usize = {{m.region.start | format_hex }};
 {%- endif %}
-pub const {{m.name}}_SIZE: usize = {{m.region.end - m.region.start | format_hex }}; // {{m.region.end - m.region.start|filesizeformat}}
+pub const {{m.name_screaming_snake_case}}_SIZE: usize = {{m.region.end - m.region.start | format_hex }}; // {{m.region.end - m.region.start|filesizeformat}}
 {%- endif %}
 {%- endfor %}
