--- a/devtools/td-layout-config/src/template/memory.jinja
+++ b/devtools/td-layout-config/src/template/memory.jinja
@@ -27,7 +27,7 @@ pub const {{m.name_screaming_snake_case}}_SIZE: usize = {{m.region.end - m.regio
 {%- endif %}
 {%- endfor %}
 
-pub const MEMORY_LAYOUT_CONFIG: &[(&'static str, usize, &'static str)] = &[
+pub const MEMORY_LAYOUT_CONFIG: &[(&str, usize, &str)] = &[
     // (name of memory region, region size, region type)
     {%- for m in memory_regions %}
     {%- if m.entry_type != entry_type_filter %}
